Logtalk/examples/errors/warnings.loader

:- initialization(
	logtalk_load(
		[misspell, singletons1, plredef, lgtredef, unknownrefs, portability],
		[unknown(warning), misspelt(warning), singletons(warning), plredef(warning), lgtredef(warning), portability(warning), report(on)])).
